@@ -26,6 +26,7 @@ None
 
 Bugs fixed in 3.28.1
 ====================
+[3521158] Paste into the Notes field (Add or Edit entry) is now always in plain text.
 [3518732] Custom special symbol set now handled correctly in Generate Password
 dialog box.
 [3518389] All date/time fields in the List view are now displayed using the user's
